--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+* {
+  margin: 0;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  align-items: flex-end;
+  background-image: url(logo.svg), -webkit-linear-gradient(top left, #007d35 0%, #007d35 40%, #0f574e 100%);
+  background-position: center 80px, center center;
+  background-repeat: no-repeat;
+  background-size: 400px, 100% 100%;
+  display: flex;
+  min-height: 100%;
+}
+
+@media (min-width: 768px) {
+  body {
+    align-items: center;
+  }
+}
+
+#root {
+  width: 100%;
+}
+
+.contenedor {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10rem;
+}
+
+.frase {
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: .5rem;
+  max-width: 800px;
+  padding: 3rem;
+}
+
+.frase h1::before {
+  color: black;
+  content: open-quote;
+  font-size: 10rem;
+  left: -1rem;
+  position: absolute;
+  top: -2rem;
+}
+
+.frase h1 {
+  font-family: 'Staatliches', cursive;
+  padding-left: 4rem;
+  position: relative;
+  text-align: center;
+}
+
+.frase p {
+  color: #666;
+  font-family: 'Handlee', cursive;
+  font-size: 1.6rem;
+  margin-top: 2rem;
+  text-align: right;
+}
+
+button {
+  background: -webkit-linear-gradient(top left, #007d35 0%, #007d35 40%, #0f574e 100%);
+
+  background-size: 300px;
+
+  border: 2px solid black;
+  color: white;
+  font-family: 'Staatliches', cursive;
+  font-size: 2rem;
+  margin-top: 3rem;
+  padding: 1rem 3rem;
+}
+
+button:hover {
+  background-size: 400px;
+  cursor: pointer;
 }
